-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
-
a8bf42072 (dev), a5999eca7 (6.8), ac06a6ffa (dev), 41f1b3717 (6.9), 9fa27f829 (dev), 1304efb22 (6.9), 7e34745a4 (6.8), 5a2ae2ae6 (6.8)
-
Multimedia wk 35-38, Multimedia wk 39-40, Multimedia wk 41-42, Multimedia wk 51-2
QMediaRecorder fails to record with the following combinations of file format and codec:
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::H264 },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::H265 },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::VP8 },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::VP9 },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::AV1 },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::Theora },
{ QMediaFormat::Matroska, QMediaFormat::VideoCodec::WMV },
The failure happens when writing the file header.
- relates to
-
QTBUG-126291 [FFmpeg] Recording from camera to MKV (Matroska Multimedia Container) fails with H.265 / H.264 codec.
-
- Closed
-
For Gerrit Dashboard: QTBUG-126276 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
567960,39 | Test encoding to different codecs and file formats | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
595930,5 | Make custom IO tests fail faster and fix a compilation warning | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
596328,2 | Make custom IO tests fail faster and fix a compilation warning | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
617237,3 | Disable H264 and H265 video codec with Matroska muxer | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
617367,2 | Test encoding to different codecs and file formats | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
617419,3 | Test encoding to different codecs and file formats | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
617793,2 | Disable H264 and H265 video codec with Matroska muxer | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
617852,3 | Disable H264 and H265 video codec with Matroska muxer | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |